<resources>
    <string name="app_name">Little Lemon</string>

    <!--    Image Descriptions    -->
    <string name="desc_logo">Little Lemon Logo</string>

    <!-- Screen Names  -->
    <string name="screen_home">Home Screen</string>
    <string name="screen_login">Login Screen</string>

    <!--    Actions    -->
    <string name="act_send_otp">Send OTP</string>
    <string name="act_resend_otp">Resend Code</string>
    <string name="act_edit_email">Edit Email</string>
    <string name="act_change_email">Change</string>
    <string name="act_verify">Verify</string>
    <string name="act_back">Navigate back to %s</string>
    <string name="act_cancel">Cancel</string>
    <string name="act_go">Let\'s Go!</string>
    <string name="act_enable_location">Use current location</string>
    <string name="act_enter_location_manually">Enter location manually</string>
    <string name="act_remove">Remove</string>

    <!--    Headings    -->
    <string name="heading_login">What\'s your email?</string>
    <string name="heading_personalize">Let\'s get to know you</string>
    <string name="heading_location_permission">Where are we delivering?</string>
    <string name="heading_order_for_delivery">Order for Delivery</string>
    <string name="heading_popular_orders">Popular Orders</string>

    <!--    Navigation Headings    -->
    <string name="nav_verify_email">Verify Email Address</string>
    <string name="nav_personal_information">Personalization</string>

    <!--    Labels    -->
    <string name="label_email_address">Email Address</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_address_label">Label</string>
    <string name="label_address_building_name">Flat/Building name</string>
    <string name="label_address_street_address">Street address</string>
    <string name="label_address_city">City</string>
    <string name="label_address_state">State</string>
    <string name="label_address_pincode">Pincode</string>
    <string name="label_address_save_as_default">Save as default</string>


    <!--    Placeholder    -->
    <string name="placeholder_email_address">someone@example.com</string>
    <string name="placeholder_first_name">Jane</string>
    <string name="placeholder_last_name">Doe</string>
    <string name="placeholder_address_building_name">1234, Sample Building</string>
    <string name="placeholder_address_street_address">123 Street Rd</string>
    <string name="placeholder_address_city">Chicago</string>
    <string name="placeholder_address_state">Illinois</string>
    <string name="placeholder_address_pincode">123456</string>

    <!--    Body Text    -->
    <string name="body_email_description">We\’ll send a verification code to get you in.</string>
    <string name="body_verification_code">Enter the 6-digit OTP sent to</string>
    <string name="body_no_otp_received">Didn\'t receive the code?</string>
    <string name="body_personalization">What should we called you?</string>
    <string name="body_location">Allow location access so we can check if you\'re in our delivery radius and get your food to your door fast.</string>


    <!--    Misc.    -->
    <string name="or">or</string>
    <string name="calories">%d cals</string>
    <string name="protein">%d\g protein</string>
    <string name="carbs">%d\g carbs</string>
    <string name="fats">%d\g fats</string>
    <string name="currency_symbol">$</string>

    <!--  Formatter  -->
    <string name="price_format">%.2f</string>
    <string name="price_format_ea">$%.2f/ea</string>
    <string name="discount_format">%.0f%% off</string>

    <!-- Error Messages -->
    <string name="generic_error_message">An unknown error occurred. Please try again!</string>
    <string name="building_name_required_error">Building/Flat name is required</string>
    <string name="street_address_required_error">Street address is required</string>
    <string name="city_required_error">City is required</string>
    <string name="state_required_error">State is required</string>
    <string name="pin_code_required_error">Pin code is required</string>
    <string name="location_saving_unknown_error">Oops! There was an error saving your location. Please try again!</string>
    <string name="invalid_location_error">There was an error geocoding your address. Make sure your location is enabled!</string>
    <string name="reverse_geocoding_error_message">There was an error while retrieving your address. Please try again!</string>
    <string name="geocoding_error_message">There was an error while retrieving your location. Please try again!</string>

    <!--  Info Messages  -->
    <string name="otp_resend_message">OTP resend successfully!</string>
    <string name="location_granted_success_message">Location granted successfully!</string>
    <string name="location_saved_success_message">Location granted successfully!</string>
    <string name="reverse_geocoding_success_message">Successfully retrieved your address!</string>
    <string name="geocoding_success_message">Successfully retrieved your location!</string>

    <!--  Loading Texts  -->
    <string name="generic_loading_message">Loading…</string>

    <!--  Test Tags -->
    <string name="test_tag_loader">LoaderTestTag</string>
    <string name="test_tag_navigation_action_left">LeftNavigationActionTestTag</string>
    <string name="test_tag_alert_dialog_overlay">AlertDialogOverlayTestTag</string>
    <string name="test_tag_address_save_as_default">AddressSaveAsDefaultTestTag</string>

    <!--  Loader content  -->
    <string name="loader_sending_verification_code">Sending a verification code to</string>
    <string name="loader_verifying_code">Verifying your code…</string>
    <string name="loader_resending_otp">Resending verification code…</string>
    <string name="loader_finishing_personalization">Almost there. Tailoring your account…</string>

    <!--  Dialog content -->
    <string name="dialog_title_delivery_address_needed">Delivery address needed</string>
    <string name="dialog_body_delivery_address_needed">Without location access, you\'ll need to type your address manually so we can verify we deliver to your area.</string>

    <string name="dialog_act_enter_manually">Enter manually</string>
    <string name="dialog_act_allow_access">Allow access</string>
    <string name="placeholder_address_label">E.g: Home</string>
    <string name="test_tag_checkbox_icon">CheckboxIconTestTag</string>
    <string name="act_save_address">Save Address</string>
    <string name="heading_add_your_address">Add your address</string>
    <string name="desc_decrease_quantity">Decrease quantity</string>
    <string name="desc_increase_quantity">Increase quantity</string>

    <!--  Internal error messages  -->
    <string name="no_gmap_api_key_header">API Key not found!</string>
    <string name="no_gmap_api_key_body">Make sure you have your Google Maps API configured in local.properties file</string>

    <!--  Navigation Item Labels  -->
    <string name="navigation_home">Home</string>
    <string name="navigation_menu">Menu</string>
    <string name="navigation_order">Orders</string>
    <string name="navigation_cart">Cart</string>
    <string name="navigation_profile">Profile</string>
    <string name="label_not_delivering">Not deliverable to</string>
    <string name="label_delivering">Delivering to</string>
    <string name="unnamed_address_label">Unnamed Address</string>
    <string name="location_string">Location: (%.4f, %.4f)</string>
    <string name="not_found_cap">NOT FOUND</string>
    <string name="view_all">View All</string>
    <string name="reservation_card_title">Table for %d</string>
    <string name="reserved_time_ago">Reserved %s</string>
    <string name="act_get_route">Get Route</string>
    <string name="heading_explore_our_cuisines">Explore our cuisines</string>
    <string name="act_filter">Filter</string>
    <string name="heading_your_orders">Your orders</string>
    <string name="act_most_recent">Most Recent</string>
    <string name="special_instructions">Special instructions</string>
    <string name="payment_mode">Payment mode</string>
    <string name="delivered_to">Delivered to</string>
    <string name="bill_amount">Bill amount</string>
    <string name="total_amount">Total amount</string>
    <string name="reorder">Re-order</string>
    <string name="refund_made_on">Refund made on</string>
    <string name="out_of_stock">Sold out</string>
    <string name="all_category">All</string>
    <string name="category_fetch_unknown_error">An unknown error occurred when getting fetching categories.</string>
    <string name="address_loading_error_message">There was an error loading your address!</string>
    <string name="dish_loading_error_message">An unknown error occured while loading dishes.</string>
    <string name="category_loading_error_message">An unknown error occured while loading categories!</string>
    <string name="heading_your_cart">Your cart (%d)</string>
    <string name="free">FREE</string>
    <string name="subtotal">Subtotal</string>
    <string name="taxes">Taxes</string>
    <string name="discounts">Discounts</string>
    <string name="shipping">Shipping</string>
    <string name="amount_payable">Amount payable</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="addresses">Addresses</string>
    <string name="default_tag">Default</string>
    <string name="subtotal_ex_taxes">Subtotal (Exclusive of taxes)</string>
    <string name="address_loading">Address Loading...</string>
    <string name="unknown_location">Unknown Location</string>
    <string name="delete_address">Delete current address</string>
    <string name="make_default">Make Default</string>
    <string name="edit_address">Edit current address</string>
    <string name="back_to_cart">Navigate back to cart</string>
    <string name="review_r">Review order</string>
    <string name="review_order">Review order</string>
    <string name="delivering_to">Delivering to</string>
    <string name="no_delivery_address">No delivery address!</string>
    <string name="select_address_to_continue">Please select or add an address to proceed to checkout.</string>
    <string name="select_address">Select Address</string>
    <string name="no_label_address">Unnamed address</string>
    <plurals name="heading_upcoming_reservation">
        <item quantity="one">Upcoming Reservation</item>
        <item quantity="other">Upcoming Reservations</item>
    </plurals>


</resources>